<resources>
    <string name="app_name">RockBee</string>
    <string name="settings">Настройки</string>
    <string name="catalog">Каталог</string>
    <string name="isPlaying">Аудио</string>
    <string name="Playlists">Плейлисты</string>
    <string name="Lobby">Онлайн</string>
    <string name="isLooping">Режим повторения по умолчанию:</string>
    <string name="isRandom">Случайный порядок по умолчанию:</string>
    <string name="loop0">Без повторений</string>
    <string name="loop1">Повторять все</string>
    <string name="loop2">Повторять один трек</string>
    <string name="apply">Принять изменения</string>
    <string name="cg">Количество файлов</string>
    <string name="emptyCatalog">Нет файлов или каталогов</string>
    <string name="emptyPlaylist">Сейчас ничего не проигрывается</string>
    <string name="playAll">Проигрывать все треки</string>
    <string name="newPlaylist">Создать новый плейлист</string>
    <string name="newPlaylistHint">Введите название плейлиста</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="playlistAlreadyExists">Плейлист с таким именем уже существует</string>
    <string name="choosePlaylist">Выберите плейлист</string>
    <string name="noNamePlaylist">Плейлисту не задано название</string>
    <string name="chooseAction">Выберите действие</string>
    <string name="deleteQ">Удалить?</string>
    <string name="delete">Удалить</string>
    <string name="addToPlaylist">Добавить в плейлист</string>
    <string name="deleteFromNowPlays">Удалить из текущего плейлиста</string>
    <string name="addToNowPlays">Добавить в текущий плейлист</string>
    <string name="addNowPlays">Сохранить текущий плейлист</string>
    <string name="chooseColor">Выбрать тему:</string>
    <string name="white_Black">Белый/Черный</string>
    <string name="black_white">Черный/Белый</string>
    <string name="beige_emerald">Бежевый/Изумрудный</string>
    <string name="gray_pink">Серый/Розовый</string>
    <string name="greenLime_darkBrown">Зеленый Лайм/Темно-коричневый</string>
    <string name="lightGreen_red">Салатовый/Красный</string>
    <string name="cherryRed_lightOrange">Вишнево-красный/Светло-Оранжевый</string>
    <string name="brown_veryLightBlue">Коричневый/Светло-голубой</string>
    <string name="darkBrown_Yellow">Темно-коричневый/Желтый</string>
    <string name="orange_blue">Оранжевый/Синий</string>
    <string name="lightOrange_olive">Светло-оранжевый/Коричневый</string>
    <string name="darkOrange_paleYellow">Темно-оранжевый/Бледно-желтый</string>
    <string name="paleYellow_red">Бледно-желтый/Красный</string>
    <string name="goldYellow_azure">Золотисто-желтый/Лазурный</string>
    <string name="turquoise_darkPurple">Бирюзовый/Фиолетовый</string>
    <string name="electrician_goldYellow">Электрик/Золотистый-желтый</string>
    <string name="darkBlue_yellowGreen">Темно-синий/Желтовато-зеленый</string>
    <string name="lily_darkPurple">Лиловый/Темно-фиолетовый</string>
    <string name="darkPurple_turquoise">Темно-фиолетовый/Бирюзовый</string>
    <string name="pink_olive">Розовый/Оливковый</string>
    <string name="saved">Сохранено</string>
    <string name="cantPlay">Не могу найти треков для воспроизведения</string>
    <string name="cantDelete">Не удалось удалить</string>
    <string name="nowPlays">Сейчас играет:</string>
    <string name="cantConnect">Соединение не удалось</string>
    <string name="tryAgain">Попытайтесь еще раз</string>
    <string name="prev">Предыдущий трек</string>
    <string name="next">Следующий трек</string>
    <string name="play">Воспроизводить</string>
    <string name="pause">Приостановить</string>
    <string name="enterName">Введите Ваше имя</string>
    <string name="noName">Вы не написали Ваше имя</string>
    <string name="name">Имя: </string>
    <string name="noInternet">Нет подключения к интернету</string>
    <string name="ready">Готово</string>
    <string name="createMy">Создать комнату</string>
    <string name="foundFriend">Найти комнату друга</string>
    <string name="changeName">Сменить имя</string>
    <string name="ok">Окей</string>
    <string name="deleteAfterEnd">Удалять треки после отключения от комнаты</string>
    <string name="listUsers">Список участников</string>
    <string name="deleteRoom">Закрыть комнату</string>
    <string name="numbersOfUsers">Список участников: </string>
    <string name="against">Пропуск: </string>
    <string name="off">Отключиться от комнаты</string>
    <string name="playToo">Воспроизводить треки из списка</string>
    <string name="pass">Пропустить трек</string>
    <string name="findByNameOrUUID">Найти комнату по UUID</string>
    <string name="enterData">Введите данные</string>
    <string name="loadingCatalog">Сканирую каталог, пожалуйста подождите</string>
    <string name="loadingCatalogComplete">Сканирование завершено</string>
    <string name="close">Закрыть</string>
    <string name="yourUUID">Ваш UUID:</string>
    <string name="friendUUID">UUID друга:</string>
    <string name="stopPlaying">Прекратить воспроизведение</string>
    <string name="UUID">UUID: </string>
    <string name="tracks">Список треков</string>
    <string name="addToTheServer">Добавить в очередь на сервер</string>
    <string name="cantPlayWithServer">Не могу проигрывать, пока Вы подключены к серверу</string>
    <string name="setPass">Установить пароль</string>
    <string name="enterPass">Введите пароль</string>
    <string name="passForRoom">Пароль для комнаты</string>
    <string name="enterUUID">Введите UUID</string>
    <string name="info">Информация о комнате</string>
    <string name="password">Пароль комнаты: </string>
    <string name="somethingCreateError">Произошла ошибка, попробуйте повторить</string>
    <string name="whatAreYouDoing">Что Вы хотите сделать?</string>
    <string name="wrongPassword">Пароль неверный</string>
    <string name="wrongRoom">Комната не найдена</string>
    <string name="closedRoom">Комната закрыта</string>
    <string name="noPassword">Нет пароля</string>
    <string name="noSong">Ничего не воспроизводится</string>
    <string name="downloading">Загружаю</string>
    <string name="cantdownload">Предыдущий трек загружается, пожалуйста подождите</string>
</resources>
