<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/friendTracks"
        android:layout_width="409dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/friendDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/friendPassButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        app:layout_constraintBottom_toTopOf="@+id/friendUserList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playButton" />

    <Button
        android:id="@+id/friendUserList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/listUsers"
        app:layout_constraintBottom_toTopOf="@+id/leave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendPassButton" />

    <Button
        android:id="@+id/leave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendUserList" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/playToo"
        app:layout_constraintBottom_toTopOf="@+id/friendPassButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friendInfo" />

    <Switch
        android:id="@+id/friendDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/deleteAfterEnd"
        app:layout_constraintBottom_toTopOf="@id/friendInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendTracks" />

    <Button
        android:id="@+id/friendInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friendDelete" />

</androidx.constraintlayout.widget.ConstraintLayout>